parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration
Rule 3     declaration_list -> declaration_list declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> struct_declaration
Rule 6     declaration -> protocol_declaration
Rule 7     var_declaration -> LET ID type_annotation_opt assign_opt semicolon_opt
Rule 8     var_declaration -> VAR ID type_annotation_opt assign_opt semicolon_opt
Rule 9     semicolon_opt -> SEMICOLON
Rule 10    semicolon_opt -> empty
Rule 11    type_annotation_opt -> COLON ID
Rule 12    type_annotation_opt -> empty
Rule 13    assign_opt -> ASSIGN expression
Rule 14    assign_opt -> empty
Rule 15    expression -> NUMBER
Rule 16    expression -> STRING
Rule 17    expression -> ID
Rule 18    expression -> TRUE
Rule 19    expression -> FALSE
Rule 20    struct_declaration -> STRUCT ID generic_params_opt where_clause_opt LBRACE property_declaration_list RBRACE
Rule 21    generic_params_opt -> generic_params
Rule 22    generic_params_opt -> empty
Rule 23    where_clause_opt -> where_clause
Rule 24    where_clause_opt -> empty
Rule 25    property_declaration_list -> var_declaration
Rule 26    property_declaration_list -> property_declaration_list var_declaration
Rule 27    property_declaration_list -> empty
Rule 28    generic_params -> LANGLE generic_parameter_list RANGLE
Rule 29    generic_parameter_list -> generic_parameter
Rule 30    generic_parameter_list -> generic_parameter_list COMMA generic_parameter
Rule 31    generic_parameter -> ID
Rule 32    generic_parameter -> constraint
Rule 33    where_clause -> WHERE constraint_list
Rule 34    constraint_list -> constraint
Rule 35    constraint_list -> constraint_list COMMA constraint
Rule 36    constraint -> ID COLON ID
Rule 37    protocol_declaration -> PROTOCOL ID LBRACE RBRACE
Rule 38    protocol_declaration -> PROTOCOL ID
Rule 39    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 13
COLON                : 11 36
COMMA                : 30 35
FALSE                : 19
ID                   : 7 8 11 17 20 31 36 36 37 38
LANGLE               : 28
LBRACE               : 20 37
LET                  : 7
NUMBER               : 15
PROTOCOL             : 37 38
RANGLE               : 28
RBRACE               : 20 37
SEMICOLON            : 9
STRING               : 16
STRUCT               : 20
TRUE                 : 18
VAR                  : 8
WHERE                : 33
error                : 

Nonterminals, with rules where they appear

assign_opt           : 7 8
constraint           : 32 34 35
constraint_list      : 33 35
declaration          : 2 3
declaration_list     : 1 3
empty                : 10 12 14 22 24 27
expression           : 13
generic_parameter    : 29 30
generic_parameter_list : 28 30
generic_params       : 21
generic_params_opt   : 20
program              : 0
property_declaration_list : 20 26
protocol_declaration : 6
semicolon_opt        : 7 8
struct_declaration   : 5
type_annotation_opt  : 7 8
var_declaration      : 4 25 26
where_clause         : 23
where_clause_opt     : 20

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration
    (3) declaration_list -> . declaration_list declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . struct_declaration
    (6) declaration -> . protocol_declaration
    (7) var_declaration -> . LET ID type_annotation_opt assign_opt semicolon_opt
    (8) var_declaration -> . VAR ID type_annotation_opt assign_opt semicolon_opt
    (20) struct_declaration -> . STRUCT ID generic_params_opt where_clause_opt LBRACE property_declaration_list RBRACE
    (37) protocol_declaration -> . PROTOCOL ID LBRACE RBRACE
    (38) protocol_declaration -> . PROTOCOL ID

    LET             shift and go to state 7
    VAR             shift and go to state 8
    STRUCT          shift and go to state 9
    PROTOCOL        shift and go to state 10

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    var_declaration                shift and go to state 4
    struct_declaration             shift and go to state 5
    protocol_declaration           shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list .
    (3) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . struct_declaration
    (6) declaration -> . protocol_declaration
    (7) var_declaration -> . LET ID type_annotation_opt assign_opt semicolon_opt
    (8) var_declaration -> . VAR ID type_annotation_opt assign_opt semicolon_opt
    (20) struct_declaration -> . STRUCT ID generic_params_opt where_clause_opt LBRACE property_declaration_list RBRACE
    (37) protocol_declaration -> . PROTOCOL ID LBRACE RBRACE
    (38) protocol_declaration -> . PROTOCOL ID

    $end            reduce using rule 1 (program -> declaration_list .)
    LET             shift and go to state 7
    VAR             shift and go to state 8
    STRUCT          shift and go to state 9
    PROTOCOL        shift and go to state 10

    declaration                    shift and go to state 11
    var_declaration                shift and go to state 4
    struct_declaration             shift and go to state 5
    protocol_declaration           shift and go to state 6

state 3

    (2) declaration_list -> declaration .

    LET             reduce using rule 2 (declaration_list -> declaration .)
    VAR             reduce using rule 2 (declaration_list -> declaration .)
    STRUCT          reduce using rule 2 (declaration_list -> declaration .)
    PROTOCOL        reduce using rule 2 (declaration_list -> declaration .)
    $end            reduce using rule 2 (declaration_list -> declaration .)


state 4

    (4) declaration -> var_declaration .

    LET             reduce using rule 4 (declaration -> var_declaration .)
    VAR             reduce using rule 4 (declaration -> var_declaration .)
    STRUCT          reduce using rule 4 (declaration -> var_declaration .)
    PROTOCOL        reduce using rule 4 (declaration -> var_declaration .)
    $end            reduce using rule 4 (declaration -> var_declaration .)


state 5

    (5) declaration -> struct_declaration .

    LET             reduce using rule 5 (declaration -> struct_declaration .)
    VAR             reduce using rule 5 (declaration -> struct_declaration .)
    STRUCT          reduce using rule 5 (declaration -> struct_declaration .)
    PROTOCOL        reduce using rule 5 (declaration -> struct_declaration .)
    $end            reduce using rule 5 (declaration -> struct_declaration .)


state 6

    (6) declaration -> protocol_declaration .

    LET             reduce using rule 6 (declaration -> protocol_declaration .)
    VAR             reduce using rule 6 (declaration -> protocol_declaration .)
    STRUCT          reduce using rule 6 (declaration -> protocol_declaration .)
    PROTOCOL        reduce using rule 6 (declaration -> protocol_declaration .)
    $end            reduce using rule 6 (declaration -> protocol_declaration .)


state 7

    (7) var_declaration -> LET . ID type_annotation_opt assign_opt semicolon_opt

    ID              shift and go to state 12


state 8

    (8) var_declaration -> VAR . ID type_annotation_opt assign_opt semicolon_opt

    ID              shift and go to state 13


state 9

    (20) struct_declaration -> STRUCT . ID generic_params_opt where_clause_opt LBRACE property_declaration_list RBRACE

    ID              shift and go to state 14


state 10

    (37) protocol_declaration -> PROTOCOL . ID LBRACE RBRACE
    (38) protocol_declaration -> PROTOCOL . ID

    ID              shift and go to state 15


state 11

    (3) declaration_list -> declaration_list declaration .

    LET             reduce using rule 3 (declaration_list -> declaration_list declaration .)
    VAR             reduce using rule 3 (declaration_list -> declaration_list declaration .)
    STRUCT          reduce using rule 3 (declaration_list -> declaration_list declaration .)
    PROTOCOL        reduce using rule 3 (declaration_list -> declaration_list declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration_list declaration .)


state 12

    (7) var_declaration -> LET ID . type_annotation_opt assign_opt semicolon_opt
    (11) type_annotation_opt -> . COLON ID
    (12) type_annotation_opt -> . empty
    (39) empty -> .

    COLON           shift and go to state 17
    ASSIGN          reduce using rule 39 (empty -> .)
    SEMICOLON       reduce using rule 39 (empty -> .)
    LET             reduce using rule 39 (empty -> .)
    VAR             reduce using rule 39 (empty -> .)
    STRUCT          reduce using rule 39 (empty -> .)
    PROTOCOL        reduce using rule 39 (empty -> .)
    $end            reduce using rule 39 (empty -> .)
    RBRACE          reduce using rule 39 (empty -> .)

    type_annotation_opt            shift and go to state 16
    empty                          shift and go to state 18

state 13

    (8) var_declaration -> VAR ID . type_annotation_opt assign_opt semicolon_opt
    (11) type_annotation_opt -> . COLON ID
    (12) type_annotation_opt -> . empty
    (39) empty -> .

    COLON           shift and go to state 17
    ASSIGN          reduce using rule 39 (empty -> .)
    SEMICOLON       reduce using rule 39 (empty -> .)
    LET             reduce using rule 39 (empty -> .)
    VAR             reduce using rule 39 (empty -> .)
    STRUCT          reduce using rule 39 (empty -> .)
    PROTOCOL        reduce using rule 39 (empty -> .)
    $end            reduce using rule 39 (empty -> .)
    RBRACE          reduce using rule 39 (empty -> .)

    type_annotation_opt            shift and go to state 19
    empty                          shift and go to state 18

state 14

    (20) struct_declaration -> STRUCT ID . generic_params_opt where_clause_opt LBRACE property_declaration_list RBRACE
    (21) generic_params_opt -> . generic_params
    (22) generic_params_opt -> . empty
    (28) generic_params -> . LANGLE generic_parameter_list RANGLE
    (39) empty -> .

    LANGLE          shift and go to state 23
    WHERE           reduce using rule 39 (empty -> .)
    LBRACE          reduce using rule 39 (empty -> .)

    generic_params_opt             shift and go to state 20
    generic_params                 shift and go to state 21
    empty                          shift and go to state 22

state 15

    (37) protocol_declaration -> PROTOCOL ID . LBRACE RBRACE
    (38) protocol_declaration -> PROTOCOL ID .

    LBRACE          shift and go to state 24
    LET             reduce using rule 38 (protocol_declaration -> PROTOCOL ID .)
    VAR             reduce using rule 38 (protocol_declaration -> PROTOCOL ID .)
    STRUCT          reduce using rule 38 (protocol_declaration -> PROTOCOL ID .)
    PROTOCOL        reduce using rule 38 (protocol_declaration -> PROTOCOL ID .)
    $end            reduce using rule 38 (protocol_declaration -> PROTOCOL ID .)


state 16

    (7) var_declaration -> LET ID type_annotation_opt . assign_opt semicolon_opt
    (13) assign_opt -> . ASSIGN expression
    (14) assign_opt -> . empty
    (39) empty -> .

    ASSIGN          shift and go to state 26
    SEMICOLON       reduce using rule 39 (empty -> .)
    LET             reduce using rule 39 (empty -> .)
    VAR             reduce using rule 39 (empty -> .)
    STRUCT          reduce using rule 39 (empty -> .)
    PROTOCOL        reduce using rule 39 (empty -> .)
    $end            reduce using rule 39 (empty -> .)
    RBRACE          reduce using rule 39 (empty -> .)

    assign_opt                     shift and go to state 25
    empty                          shift and go to state 27

state 17

    (11) type_annotation_opt -> COLON . ID

    ID              shift and go to state 28


state 18

    (12) type_annotation_opt -> empty .

    ASSIGN          reduce using rule 12 (type_annotation_opt -> empty .)
    SEMICOLON       reduce using rule 12 (type_annotation_opt -> empty .)
    LET             reduce using rule 12 (type_annotation_opt -> empty .)
    VAR             reduce using rule 12 (type_annotation_opt -> empty .)
    STRUCT          reduce using rule 12 (type_annotation_opt -> empty .)
    PROTOCOL        reduce using rule 12 (type_annotation_opt -> empty .)
    $end            reduce using rule 12 (type_annotation_opt -> empty .)
    RBRACE          reduce using rule 12 (type_annotation_opt -> empty .)


state 19

    (8) var_declaration -> VAR ID type_annotation_opt . assign_opt semicolon_opt
    (13) assign_opt -> . ASSIGN expression
    (14) assign_opt -> . empty
    (39) empty -> .

    ASSIGN          shift and go to state 26
    SEMICOLON       reduce using rule 39 (empty -> .)
    LET             reduce using rule 39 (empty -> .)
    VAR             reduce using rule 39 (empty -> .)
    STRUCT          reduce using rule 39 (empty -> .)
    PROTOCOL        reduce using rule 39 (empty -> .)
    $end            reduce using rule 39 (empty -> .)
    RBRACE          reduce using rule 39 (empty -> .)

    assign_opt                     shift and go to state 29
    empty                          shift and go to state 27

state 20

    (20) struct_declaration -> STRUCT ID generic_params_opt . where_clause_opt LBRACE property_declaration_list RBRACE
    (23) where_clause_opt -> . where_clause
    (24) where_clause_opt -> . empty
    (33) where_clause -> . WHERE constraint_list
    (39) empty -> .

    WHERE           shift and go to state 33
    LBRACE          reduce using rule 39 (empty -> .)

    where_clause_opt               shift and go to state 30
    where_clause                   shift and go to state 31
    empty                          shift and go to state 32

state 21

    (21) generic_params_opt -> generic_params .

    WHERE           reduce using rule 21 (generic_params_opt -> generic_params .)
    LBRACE          reduce using rule 21 (generic_params_opt -> generic_params .)


state 22

    (22) generic_params_opt -> empty .

    WHERE           reduce using rule 22 (generic_params_opt -> empty .)
    LBRACE          reduce using rule 22 (generic_params_opt -> empty .)


state 23

    (28) generic_params -> LANGLE . generic_parameter_list RANGLE
    (29) generic_parameter_list -> . generic_parameter
    (30) generic_parameter_list -> . generic_parameter_list COMMA generic_parameter
    (31) generic_parameter -> . ID
    (32) generic_parameter -> . constraint
    (36) constraint -> . ID COLON ID

    ID              shift and go to state 36

    generic_parameter_list         shift and go to state 34
    generic_parameter              shift and go to state 35
    constraint                     shift and go to state 37

state 24

    (37) protocol_declaration -> PROTOCOL ID LBRACE . RBRACE

    RBRACE          shift and go to state 38


state 25

    (7) var_declaration -> LET ID type_annotation_opt assign_opt . semicolon_opt
    (9) semicolon_opt -> . SEMICOLON
    (10) semicolon_opt -> . empty
    (39) empty -> .

    SEMICOLON       shift and go to state 40
    LET             reduce using rule 39 (empty -> .)
    VAR             reduce using rule 39 (empty -> .)
    STRUCT          reduce using rule 39 (empty -> .)
    PROTOCOL        reduce using rule 39 (empty -> .)
    $end            reduce using rule 39 (empty -> .)
    RBRACE          reduce using rule 39 (empty -> .)

    semicolon_opt                  shift and go to state 39
    empty                          shift and go to state 41

state 26

    (13) assign_opt -> ASSIGN . expression
    (15) expression -> . NUMBER
    (16) expression -> . STRING
    (17) expression -> . ID
    (18) expression -> . TRUE
    (19) expression -> . FALSE

    NUMBER          shift and go to state 43
    STRING          shift and go to state 44
    ID              shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47

    expression                     shift and go to state 42

state 27

    (14) assign_opt -> empty .

    SEMICOLON       reduce using rule 14 (assign_opt -> empty .)
    LET             reduce using rule 14 (assign_opt -> empty .)
    VAR             reduce using rule 14 (assign_opt -> empty .)
    STRUCT          reduce using rule 14 (assign_opt -> empty .)
    PROTOCOL        reduce using rule 14 (assign_opt -> empty .)
    $end            reduce using rule 14 (assign_opt -> empty .)
    RBRACE          reduce using rule 14 (assign_opt -> empty .)


state 28

    (11) type_annotation_opt -> COLON ID .

    ASSIGN          reduce using rule 11 (type_annotation_opt -> COLON ID .)
    SEMICOLON       reduce using rule 11 (type_annotation_opt -> COLON ID .)
    LET             reduce using rule 11 (type_annotation_opt -> COLON ID .)
    VAR             reduce using rule 11 (type_annotation_opt -> COLON ID .)
    STRUCT          reduce using rule 11 (type_annotation_opt -> COLON ID .)
    PROTOCOL        reduce using rule 11 (type_annotation_opt -> COLON ID .)
    $end            reduce using rule 11 (type_annotation_opt -> COLON ID .)
    RBRACE          reduce using rule 11 (type_annotation_opt -> COLON ID .)


state 29

    (8) var_declaration -> VAR ID type_annotation_opt assign_opt . semicolon_opt
    (9) semicolon_opt -> . SEMICOLON
    (10) semicolon_opt -> . empty
    (39) empty -> .

    SEMICOLON       shift and go to state 40
    LET             reduce using rule 39 (empty -> .)
    VAR             reduce using rule 39 (empty -> .)
    STRUCT          reduce using rule 39 (empty -> .)
    PROTOCOL        reduce using rule 39 (empty -> .)
    $end            reduce using rule 39 (empty -> .)
    RBRACE          reduce using rule 39 (empty -> .)

    semicolon_opt                  shift and go to state 48
    empty                          shift and go to state 41

state 30

    (20) struct_declaration -> STRUCT ID generic_params_opt where_clause_opt . LBRACE property_declaration_list RBRACE

    LBRACE          shift and go to state 49


state 31

    (23) where_clause_opt -> where_clause .

    LBRACE          reduce using rule 23 (where_clause_opt -> where_clause .)


state 32

    (24) where_clause_opt -> empty .

    LBRACE          reduce using rule 24 (where_clause_opt -> empty .)


state 33

    (33) where_clause -> WHERE . constraint_list
    (34) constraint_list -> . constraint
    (35) constraint_list -> . constraint_list COMMA constraint
    (36) constraint -> . ID COLON ID

    ID              shift and go to state 52

    constraint_list                shift and go to state 50
    constraint                     shift and go to state 51

state 34

    (28) generic_params -> LANGLE generic_parameter_list . RANGLE
    (30) generic_parameter_list -> generic_parameter_list . COMMA generic_parameter

    RANGLE          shift and go to state 53
    COMMA           shift and go to state 54


state 35

    (29) generic_parameter_list -> generic_parameter .

    RANGLE          reduce using rule 29 (generic_parameter_list -> generic_parameter .)
    COMMA           reduce using rule 29 (generic_parameter_list -> generic_parameter .)


state 36

    (31) generic_parameter -> ID .
    (36) constraint -> ID . COLON ID

    RANGLE          reduce using rule 31 (generic_parameter -> ID .)
    COMMA           reduce using rule 31 (generic_parameter -> ID .)
    COLON           shift and go to state 55


state 37

    (32) generic_parameter -> constraint .

    RANGLE          reduce using rule 32 (generic_parameter -> constraint .)
    COMMA           reduce using rule 32 (generic_parameter -> constraint .)


state 38

    (37) protocol_declaration -> PROTOCOL ID LBRACE RBRACE .

    LET             reduce using rule 37 (protocol_declaration -> PROTOCOL ID LBRACE RBRACE .)
    VAR             reduce using rule 37 (protocol_declaration -> PROTOCOL ID LBRACE RBRACE .)
    STRUCT          reduce using rule 37 (protocol_declaration -> PROTOCOL ID LBRACE RBRACE .)
    PROTOCOL        reduce using rule 37 (protocol_declaration -> PROTOCOL ID LBRACE RBRACE .)
    $end            reduce using rule 37 (protocol_declaration -> PROTOCOL ID LBRACE RBRACE .)


state 39

    (7) var_declaration -> LET ID type_annotation_opt assign_opt semicolon_opt .

    LET             reduce using rule 7 (var_declaration -> LET ID type_annotation_opt assign_opt semicolon_opt .)
    VAR             reduce using rule 7 (var_declaration -> LET ID type_annotation_opt assign_opt semicolon_opt .)
    STRUCT          reduce using rule 7 (var_declaration -> LET ID type_annotation_opt assign_opt semicolon_opt .)
    PROTOCOL        reduce using rule 7 (var_declaration -> LET ID type_annotation_opt assign_opt semicolon_opt .)
    $end            reduce using rule 7 (var_declaration -> LET ID type_annotation_opt assign_opt semicolon_opt .)
    RBRACE          reduce using rule 7 (var_declaration -> LET ID type_annotation_opt assign_opt semicolon_opt .)


state 40

    (9) semicolon_opt -> SEMICOLON .

    LET             reduce using rule 9 (semicolon_opt -> SEMICOLON .)
    VAR             reduce using rule 9 (semicolon_opt -> SEMICOLON .)
    STRUCT          reduce using rule 9 (semicolon_opt -> SEMICOLON .)
    PROTOCOL        reduce using rule 9 (semicolon_opt -> SEMICOLON .)
    $end            reduce using rule 9 (semicolon_opt -> SEMICOLON .)
    RBRACE          reduce using rule 9 (semicolon_opt -> SEMICOLON .)


state 41

    (10) semicolon_opt -> empty .

    LET             reduce using rule 10 (semicolon_opt -> empty .)
    VAR             reduce using rule 10 (semicolon_opt -> empty .)
    STRUCT          reduce using rule 10 (semicolon_opt -> empty .)
    PROTOCOL        reduce using rule 10 (semicolon_opt -> empty .)
    $end            reduce using rule 10 (semicolon_opt -> empty .)
    RBRACE          reduce using rule 10 (semicolon_opt -> empty .)


state 42

    (13) assign_opt -> ASSIGN expression .

    SEMICOLON       reduce using rule 13 (assign_opt -> ASSIGN expression .)
    LET             reduce using rule 13 (assign_opt -> ASSIGN expression .)
    VAR             reduce using rule 13 (assign_opt -> ASSIGN expression .)
    STRUCT          reduce using rule 13 (assign_opt -> ASSIGN expression .)
    PROTOCOL        reduce using rule 13 (assign_opt -> ASSIGN expression .)
    $end            reduce using rule 13 (assign_opt -> ASSIGN expression .)
    RBRACE          reduce using rule 13 (assign_opt -> ASSIGN expression .)


state 43

    (15) expression -> NUMBER .

    SEMICOLON       reduce using rule 15 (expression -> NUMBER .)
    LET             reduce using rule 15 (expression -> NUMBER .)
    VAR             reduce using rule 15 (expression -> NUMBER .)
    STRUCT          reduce using rule 15 (expression -> NUMBER .)
    PROTOCOL        reduce using rule 15 (expression -> NUMBER .)
    $end            reduce using rule 15 (expression -> NUMBER .)
    RBRACE          reduce using rule 15 (expression -> NUMBER .)


state 44

    (16) expression -> STRING .

    SEMICOLON       reduce using rule 16 (expression -> STRING .)
    LET             reduce using rule 16 (expression -> STRING .)
    VAR             reduce using rule 16 (expression -> STRING .)
    STRUCT          reduce using rule 16 (expression -> STRING .)
    PROTOCOL        reduce using rule 16 (expression -> STRING .)
    $end            reduce using rule 16 (expression -> STRING .)
    RBRACE          reduce using rule 16 (expression -> STRING .)


state 45

    (17) expression -> ID .

    SEMICOLON       reduce using rule 17 (expression -> ID .)
    LET             reduce using rule 17 (expression -> ID .)
    VAR             reduce using rule 17 (expression -> ID .)
    STRUCT          reduce using rule 17 (expression -> ID .)
    PROTOCOL        reduce using rule 17 (expression -> ID .)
    $end            reduce using rule 17 (expression -> ID .)
    RBRACE          reduce using rule 17 (expression -> ID .)


state 46

    (18) expression -> TRUE .

    SEMICOLON       reduce using rule 18 (expression -> TRUE .)
    LET             reduce using rule 18 (expression -> TRUE .)
    VAR             reduce using rule 18 (expression -> TRUE .)
    STRUCT          reduce using rule 18 (expression -> TRUE .)
    PROTOCOL        reduce using rule 18 (expression -> TRUE .)
    $end            reduce using rule 18 (expression -> TRUE .)
    RBRACE          reduce using rule 18 (expression -> TRUE .)


state 47

    (19) expression -> FALSE .

    SEMICOLON       reduce using rule 19 (expression -> FALSE .)
    LET             reduce using rule 19 (expression -> FALSE .)
    VAR             reduce using rule 19 (expression -> FALSE .)
    STRUCT          reduce using rule 19 (expression -> FALSE .)
    PROTOCOL        reduce using rule 19 (expression -> FALSE .)
    $end            reduce using rule 19 (expression -> FALSE .)
    RBRACE          reduce using rule 19 (expression -> FALSE .)


state 48

    (8) var_declaration -> VAR ID type_annotation_opt assign_opt semicolon_opt .

    LET             reduce using rule 8 (var_declaration -> VAR ID type_annotation_opt assign_opt semicolon_opt .)
    VAR             reduce using rule 8 (var_declaration -> VAR ID type_annotation_opt assign_opt semicolon_opt .)
    STRUCT          reduce using rule 8 (var_declaration -> VAR ID type_annotation_opt assign_opt semicolon_opt .)
    PROTOCOL        reduce using rule 8 (var_declaration -> VAR ID type_annotation_opt assign_opt semicolon_opt .)
    $end            reduce using rule 8 (var_declaration -> VAR ID type_annotation_opt assign_opt semicolon_opt .)
    RBRACE          reduce using rule 8 (var_declaration -> VAR ID type_annotation_opt assign_opt semicolon_opt .)


state 49

    (20) struct_declaration -> STRUCT ID generic_params_opt where_clause_opt LBRACE . property_declaration_list RBRACE
    (25) property_declaration_list -> . var_declaration
    (26) property_declaration_list -> . property_declaration_list var_declaration
    (27) property_declaration_list -> . empty
    (7) var_declaration -> . LET ID type_annotation_opt assign_opt semicolon_opt
    (8) var_declaration -> . VAR ID type_annotation_opt assign_opt semicolon_opt
    (39) empty -> .

  ! shift/reduce conflict for LET resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
    LET             shift and go to state 7
    VAR             shift and go to state 8
    RBRACE          reduce using rule 39 (empty -> .)

  ! LET             [ reduce using rule 39 (empty -> .) ]
  ! VAR             [ reduce using rule 39 (empty -> .) ]

    property_declaration_list      shift and go to state 56
    var_declaration                shift and go to state 57
    empty                          shift and go to state 58

state 50

    (33) where_clause -> WHERE constraint_list .
    (35) constraint_list -> constraint_list . COMMA constraint

    LBRACE          reduce using rule 33 (where_clause -> WHERE constraint_list .)
    COMMA           shift and go to state 59


state 51

    (34) constraint_list -> constraint .

    COMMA           reduce using rule 34 (constraint_list -> constraint .)
    LBRACE          reduce using rule 34 (constraint_list -> constraint .)


state 52

    (36) constraint -> ID . COLON ID

    COLON           shift and go to state 55


state 53

    (28) generic_params -> LANGLE generic_parameter_list RANGLE .

    WHERE           reduce using rule 28 (generic_params -> LANGLE generic_parameter_list RANGLE .)
    LBRACE          reduce using rule 28 (generic_params -> LANGLE generic_parameter_list RANGLE .)


state 54

    (30) generic_parameter_list -> generic_parameter_list COMMA . generic_parameter
    (31) generic_parameter -> . ID
    (32) generic_parameter -> . constraint
    (36) constraint -> . ID COLON ID

    ID              shift and go to state 36

    generic_parameter              shift and go to state 60
    constraint                     shift and go to state 37

state 55

    (36) constraint -> ID COLON . ID

    ID              shift and go to state 61


state 56

    (20) struct_declaration -> STRUCT ID generic_params_opt where_clause_opt LBRACE property_declaration_list . RBRACE
    (26) property_declaration_list -> property_declaration_list . var_declaration
    (7) var_declaration -> . LET ID type_annotation_opt assign_opt semicolon_opt
    (8) var_declaration -> . VAR ID type_annotation_opt assign_opt semicolon_opt

    RBRACE          shift and go to state 62
    LET             shift and go to state 7
    VAR             shift and go to state 8

    var_declaration                shift and go to state 63

state 57

    (25) property_declaration_list -> var_declaration .

    RBRACE          reduce using rule 25 (property_declaration_list -> var_declaration .)
    LET             reduce using rule 25 (property_declaration_list -> var_declaration .)
    VAR             reduce using rule 25 (property_declaration_list -> var_declaration .)


state 58

    (27) property_declaration_list -> empty .

    RBRACE          reduce using rule 27 (property_declaration_list -> empty .)
    LET             reduce using rule 27 (property_declaration_list -> empty .)
    VAR             reduce using rule 27 (property_declaration_list -> empty .)


state 59

    (35) constraint_list -> constraint_list COMMA . constraint
    (36) constraint -> . ID COLON ID

    ID              shift and go to state 52

    constraint                     shift and go to state 64

state 60

    (30) generic_parameter_list -> generic_parameter_list COMMA generic_parameter .

    RANGLE          reduce using rule 30 (generic_parameter_list -> generic_parameter_list COMMA generic_parameter .)
    COMMA           reduce using rule 30 (generic_parameter_list -> generic_parameter_list COMMA generic_parameter .)


state 61

    (36) constraint -> ID COLON ID .

    RANGLE          reduce using rule 36 (constraint -> ID COLON ID .)
    COMMA           reduce using rule 36 (constraint -> ID COLON ID .)
    LBRACE          reduce using rule 36 (constraint -> ID COLON ID .)


state 62

    (20) struct_declaration -> STRUCT ID generic_params_opt where_clause_opt LBRACE property_declaration_list RBRACE .

    LET             reduce using rule 20 (struct_declaration -> STRUCT ID generic_params_opt where_clause_opt LBRACE property_declaration_list RBRACE .)
    VAR             reduce using rule 20 (struct_declaration -> STRUCT ID generic_params_opt where_clause_opt LBRACE property_declaration_list RBRACE .)
